# salary-prediction

./: .dockerignore  .env  .gitignore  Dockerfile  pyproject.toml
app/: app.py  post.sh
data/evaluation/: X_test.pkl  y_test.pkl
data/validation/: X_train.pkl  y_train.pkl
models/: model_performance_report.csv  model_validation_report.csv
models/linear_regression/: trained_linear_regression.pkl
models/ridge_regression/: trained_ridge_regression.pkl
notebooks/: eda.ipynb  evaluation.ipynb  validation.ipynb
salary_prediction/config/: config.py
salary_prediction/data/: processing.py
salary_prediction/model/: training.py
